--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "ts-helpers",
-  "type": "module",
-  "private": true,
-  "version": "0.0.1",
-  "description": "A collection of convenience ts utilities",
-  "main": "index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "exports": {
-    "./arrays": "./src/arrays.ts",
-    "./random": "./src/random.ts",
-    "./sets": "./src/sets.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.3"
-  }
+	"name": "ts-helpers",
+	"type": "module",
+	"private": true,
+	"version": "0.0.1",
+	"description": "A collection of convenience ts utilities",
+	"main": "index.ts",
+	"scripts": {
+		"format": "prettier --write ."
+	},
+	"exports": {
+		"./arrays": "./src/arrays.ts",
+		"./random": "./src/random.ts",
+		"./sets": "./src/sets.ts"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "MIT",
+	"devDependencies": {
+		"prettier": "^3.2.5",
+		"typescript": "^5.4.3"
+	}
 }
