--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"description": "A collection of convenience ts utilities",
 	"main": "index.ts",
 	"scripts": {
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+    "test": "vitest"
 	},
 	"exports": {
 		"./arrays": "./src/arrays.ts",
@@ -18,6 +19,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"prettier": "^3.2.5",
-		"typescript": "^5.4.3"
+		"typescript": "^5.4.3",
+		"vitest": "^1.4.0"
 	}
 }
