--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@fcrozatier/ts-helpers",
 	"type": "module",
-	"version": "0.0.6",
+	"version": "0.0.7",
 	"description": "A collection of convenience ts utilities",
 	"scripts": {
 		"format": "prettier --write .",
@@ -12,6 +12,7 @@
 	],
 	"exports": {
 		"./arrays": "./src/arrays.ts",
+		"./numbers": "./src/numbers.ts",
 		"./objects": "./src/objects.ts",
 		"./promises": "./src/promises.ts",
 		"./random": "./src/random.ts",
