--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"format": "prettier --write .",
 		"test": "vitest",
-		"build": "tsc"
+		"build": "tsc",
+		"prepublishOnly": "pnpm build"
 	},
 	"main": "./build/index.js",
 	"files": [
