--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"format": "prettier --write .",
 		"test": "vitest",
 		"build": "tsc",
-		"prepublishOnly": "pnpm build",
+		"prepublishOnly": "pnpm test && pnpm build",
 		"postpublish": "git push --follow-tags"
 	},
 	"main": "./build/index.js",
