--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		// "exactOptionalPropertyTypes": true,               /* Interpret optional property types as written, rather than adding 'undefined'. */
-		"noImplicitReturns": true,
+		// "noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedIndexedAccess": true,
 		"noImplicitOverride": true /* Ensure overriding members in derived classes are marked with an override modifier. */,
